--- a/Main/GithubAction/Main.yml
+++ b/Main/GithubAction/Main.yml
@@ -1,6 +1,8 @@
 ﻿name: dotnet package
 
-on: [push]
+on: 
+    push:
+        branches: ["*"]
 
 jobs:
   build:
@@ -8,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        dotnet-version: ['3.0', '3.1.x', '5.0.x' ]
+        dotnet-version: ['6.0']
 
     steps:
       - uses: actions/checkout@v3
