--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,9 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: ${{ matrix.dotnet-version }}
+      - name: Install dependencies
+        run: dotnet restore
       - name: Build
         run: dotnet build --configuration Release --no-restore
-      - name: Tests
-        run: dotnet test
+      - name: Test
+        run: dotnet test --no-restore --verbosity normal
